<resources>
    <string name="app_name">Calculadora</string>
    <string name="somar">somar</string>
    <string name="subtrair">subtrair</string>
    <string name="dividir">dividir</string>
    <string name="multiplicar">multiplicar</string>
    <string name="resultado">resultado</string>
    <string name="numero01">informar numero 1</string>
    <string name="numero02">informar numero 2</string>

</resources>

